--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "description": "Workshops app",
     "slug": "snack-BkW8-1v6Q",
     "privacy": "unlisted",
-    "sdkVersion": "31.0.0",
+    "sdkVersion": "36.0.0",
     "version": "1.0.0",
     "orientation": "portrait",
     "primaryColor": "#cccccc",
@@ -23,6 +23,10 @@
     },
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "platforms": [
+      "android",
+      "ios"
+    ]
   }
 }
