--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "react-navigation": "4.0.10",
     "react-navigation-drawer": "2.3.1",
     "react-navigation-stack": "1.10.3",
-    "react-navigation-tabs": "2.5.6",
-    "regenerator-runtime": "0.13.3"
+    "react-navigation-tabs": "2.5.6"
   }
 }
